fixed the nav bar on mobile design

--- a/index.css
+++ b/index.css
@@ -87,6 +87,7 @@ nav {
 
 .navigation-items{
   margin-right: 3%;
+  font-size: 2.5rem;
 }
 
 header {
